# pytpfa

./: .gitignore  Makefile  README.md  pyproject.toml  venv
pytpfa/model/: TODO  __init__.py  solver.py
pytpfa/utils/: analytical.py  io.py  mesh.py
pytpfa/utils/managers/: __init__.py  dmda_manager.py  dmstag_manager.py
test/: test_io.py  test_manager.py  test_mesh.py
tools/: run.py
tools/examples/example_1/: README.md  reservoir.ini
tools/examples/example_2/: README.md  reservoir.ini
tools/examples/example_3/: README.md  reservoir.ini
tools/examples/example_4/: README.md  reservoir.ini
tools/examples/example_Li/: reservoir.ini
tools/scripts/: compare.py  configure.py
